# HomelabCmd

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SUPPORT.md  alembic.ini  audit_report.md  check_actions.py  docker-compose.yml  pyproject.toml
agent/: .gitignore  Dockerfile  README.md  __init__.py  __main__.py  collectors.py  config.py  config.yaml.example  executor.py  heartbeat.py  homelab-agent-readonly.service  homelab-agent-readwrite.service  homelab-agent.service  install.sh  requirements.txt  test_collectors_filesystem.py  test_collectors_network.py
data/config-packs/: base.yaml  developer-lite.yaml  developer-max.yaml
docs/: docker-testing.md
docs/adr/: 001-heartbeat-response-schema.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/e2e/: alerts.spec.ts  dashboard.spec.ts  scans.spec.ts  server-detail.spec.ts  services.spec.ts  settings.spec.ts  visual.spec.ts
frontend/src/: App.tsx  index.css
migrations/: env.py
migrations/versions/: 0ff25fb760c4_add_remediation_actions_table.py  2e6e20f4bc94_initial_schema_with_server_and_metrics.py  3ea7c7846aa8_add_server_is_paused.py  471db12d81d1_extend_remediation_actions_schema.py  (+21 more)
scripts/: check_test_fixtures.py
sdlc-studio/: .config.yaml  .version  AUDIT_FINDINGS.md  brand-guide.md  personas.md  prd.md  trd.md  tsd.md  v2-roadmap.md
tests/: __init__.py  conftest.py  test_action_approval.py  test_action_notifications.py  test_actions_api.py  test_agent.py  test_agent_deploy_service.py  test_agent_executor.py  test_agent_guid.py  test_agent_registration.py  test_agents_coverage.py  test_alert_model.py  test_alerting.py  test_alerts_api.py  test_api_preferences.py  test_api_response_schema.py  test_apt_actions.py  test_auth.py  test_bg0011_inactive_server_actions.py  test_bg0017_agent_mode_actions.py  test_command_whitelist.py  test_commands_api.py  test_compliance_service.py  test_compliance_summary_api.py  test_config.py  test_config_apply_api.py  test_config_check_api.py  test_config_packs.py  test_connectivity_settings.py  test_cost_breakdown.py  test_cost_config.py  test_cost_history.py  test_cost_history_api.py  test_cost_summary.py  test_costs_usage.py  test_credential_service.py  test_database.py  test_discovery_routes.py  test_discovery_service.py  test_docs.py  (+38 more)
(+751 files in other folders)
